# ant-connect-streamlit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: generate_models.py
src/ant_connect_streamlit/: __init__.py  models.py
src/ant_connect_streamlit/_bridge/: __init__.py
src/ant_connect_streamlit/_bridge/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/ant_connect_streamlit/_bridge/frontend/src/: bridge.ts
