[project]
name = "ant-connect-streamlit"
version = "0.1.0"
description = "Python/Streamlit client for ANT-OS iframe communication"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "streamlit>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ant_connect_streamlit"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.57.0",
]
